--- a/tmpl/head.tmpl
+++ b/tmpl/head.tmpl
@@ -20,6 +20,7 @@
   <link type="text/css" rel="stylesheet" href="styles/app.min.css">
   <link type="text/css" rel="stylesheet" href="styles/iframe.css">
   <link type="text/css" rel="stylesheet" href="<?js= betterDocs.css ?>">
+  <link type="text/css" rel="stylesheet" href="./build/entry.css">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
   <?js if (betterDocs.head) { ?>
